--- a/_posts/2018-11/2018-11-17-Linux拦截某个ip的所有流量.md
+++ b/_posts/2018-11/2018-11-17-Linux拦截某个ip的所有流量.md
@@ -15,7 +15,7 @@ tags:
 # 找出原因
 登录到自己的主机之后，我先用`nload`命令查看一下机器的实时流量，这时发现正在快速的跑着流量，果然有问题！
 接下来运行`iftop`命令查看连接情况，这时发现了一个ip `173.208.188.246`连接上了本机并且流量跑得还不慢。把这个ip输到了浏览器进行访问，出了这样一个界面。
-![](../../images/2018-11/qwe123.png)
+![](/images/2018-11/qwe123.png)
 查了一下这个ip的信息，物理位置是在美国，而这个页面是中文，肯定就有问题了。
 # 封锁ip
 最简单粗暴的方法呢就是禁止掉这个ip，不让他连接到这台电脑。
