--- a/_posts/2018-11/2018-11-17-Linux拦截某个ip的所有流量.md
+++ b/_posts/2018-11/2018-11-17-Linux拦截某个ip的所有流量.md
@@ -7,7 +7,7 @@ author:     Yonghao Wang
 header-img: images/2018-11/cold.jpg
 catalog: true
 tags:
-    - Liunx
+    - Linux
 ---
 > 最近登录自己基于caddy + filemanager搭建的个人网盘，发现竟然上不去了，于是登录主机商的管理面板查看情况，竟然流量溢出了！怀疑是机器被盗用了，与客服的一番PY（沟通）之后呢，他给我重置了一下流量便可以正常访问了。
 > 当然，解决问题才是重点。
