--- a/_posts/2018-11/2018-11-19-ubuntu搭建自己的安全可控聊天服务.md
+++ b/_posts/2018-11/2018-11-19-ubuntu搭建自己的安全可控聊天服务.md
@@ -9,10 +9,12 @@ catalog: true
 tags:
     - Linux
 ---
+> 2018.11.21 增加中文频道名设置方法
+
 # 前言
 得益于qq、微信的疯狂监控和审查，以及安全机制，再加上在qq里发送链接等文本的时候，它会自动给你在前边加上一个小图标，导致传输文本等信息时及其麻烦。
 
-团队里进行交流的时候当然我们希望聊天记录等信息掌握在自己手里，而不是放在别人那里为所欲为:)。
+团队里进行交流的时候当然我们希望聊天记录等信息掌握在自己手里，而不是放在别人那里被为所欲为:)。
 
 有一个名为[Rocket.Chat](https://github.com/RocketChat/Rocket.Chat)的开源项目,使得我们可以在自己的服务器上快速搭建属于自己的全平台的聊天系统。
 
@@ -23,3 +25,12 @@ tags:
 sudo snap install rocketchat-server
 ```
 完成之后通过`ip:3000`即可开始设置该系统。
+
+# 技巧
+#### 频道中文名
+选项 > 管理 > 下滑到底部通用 > UTF-8 > UTF-8 名称验证
+将其中的内容替换为
+```
+[A-Za-z0-9-_.\u00C0-\u017F\u4e00-\u9fa5]+
+```
+这样在创建频道的时候就可以输入中文了
