--- a/_posts/2018-11/2018-11-23-telegram.md
+++ b/_posts/2018-11/2018-11-23-telegram.md
@@ -23,7 +23,7 @@ tags:
 
 在这个平台上，人们交流的过程从一开始就是加密的，此外，人们在这里可以公开表达观点，并将它们同时发送给许多人。也正是因为这个原因，它受到俄罗斯用户的青睐，每天发送的信息量极大，从而在俄罗斯媒体领域得到了不容小觑的地位。当然，在这个平台上新闻和假新闻同时共存。据称，全球范围内Telegram已拥有2亿用户，其中很多人拥有的粉丝量超过15万。
 
-在Telegram公司老板拒绝为政府解码后，俄罗斯媒体监管机构把诉状递交到法院.在莫斯科法庭作出裁决之后，俄罗斯方面从周一(2018.4.30)开始（试图）封杀 Telegram。俄罗斯国家电信监管机构提起诉讼，要求限制对 Telegram 服务的访问，因为后者拒绝向俄罗斯当局交出加密密钥——法庭批准了封杀禁令。
+在Telegram公司老板拒绝为政府解码后，俄罗斯媒体监管机构把诉状递交到法院.在莫斯科法庭作出裁决之后，俄罗斯方面从周一(201x.4.30)开始（试图）封杀 Telegram。俄罗斯国家电信监管机构提起诉讼，要求限制对 Telegram 服务的访问，因为后者拒绝向俄罗斯当局交出加密密钥——法庭批准了封杀禁令。
 
 杜罗夫在自己 Telegram 频道的一则帖子中写道：“过去的 24 小时中，因为我们拒绝向俄罗斯安全部门提供加密密钥，Telegram 在俄罗斯遭受到网络运营商的封锁。对我们来说，这是一项轻松简单的决定。毕竟我们向用户保证了百分百的隐私，哪怕 Telegram 中断服务我们也不会违背这一承诺。
 
