--- a/_posts/2018-11/2018-11-24-给自己的网站启用https.md
+++ b/_posts/2018-11/2018-11-24-给自己的网站启用https.md
@@ -67,4 +67,10 @@ domain2.example.com {
     proxy / 127.0.0.1:8443
 }
 ```
+*这里需要注意的是，这样设置后，在浏览器使用ip访问将会出现*
+```
+404 Site xxx.xxx.xxx.xxx is not served on this interface
+```
+*正是因为我们只设置了域名，它并不知道ip需要指向哪一个服务，所以使用域名访问即可*
+
 这样既给本地的web服务轻松的加上了https，也实现了不同的域名对应的不同的web服务这一功能。
