--- a/_posts/2018-11/2018-11-23-telegram.md
+++ b/_posts/2018-11/2018-11-23-telegram.md
@@ -4,7 +4,7 @@ title:      在Linunx、Windows、Android安装并使用telegram(电报)
 subtitle:   使用telegram官方提供的MTProxy进行代理
 date:       2018-11-23
 author:     Yonghao Wang
-header-img: images/2018-11/cold.jpg
+header-img: images/2018-11/B5C75C1C62260347B7086E97EAAD5E6D.jpg
 catalog: true
 tags:
     - Linux
@@ -33,17 +33,17 @@ tags:
 # Android系统
 首先将客户端下载到自己的手机，并安装好它。
 
-*[下载Android客户端](/files/2018-11/telegram/telegram-4-9-1.apk)*
+*[下载Android客户端-4.9.1](https://www.mrwang.pw/files/public/telegram/telegram-4-9-1.apk)*
 
 # Windows系统
 
-*[下载Windows客户端](/files/2018-11/telegram/telegram-4-9-1.apk)*
+*[下载Windows客户端](https://www.mrwang.pw/files/public/telegram/tg-linux64.tar.xz)*
 
 
 # Linux系统
 
-*[下载Linux客户端(32位)](/files/2018-11/telegram/tsetup32.1.4.3.tar.xz)*
-*[下载Linux客户端(64位)](/files/2018-11/telegram/tsetup.1.4.3.tar.xz)*
+*[下载Linux客户端(32位)](https://www.mrwang.pw/files/public/telegram/tg-linux32.tar.xz)*
+*[下载Linux客户端(64位)](https://www.mrwang.pw/files/public/telegram/tg-linux64.tar.xz)*
 
 
 
