--- a/_posts/2018-11/2018-11-29-卸载阿里云服务器里面监控软件云骑士.md
+++ b/_posts/2018-11/2018-11-29-卸载阿里云服务器里面监控软件云骑士.md
@@ -4,7 +4,7 @@ title:      卸载阿里云服务器里面监控软件云盾(安骑士)
 subtitle:   删除阿里云登录界面欢迎信息
 date:       2018-11-29
 author:     Yonghao Wang
-header-img: images/2018-11/bg.jpg
+header-img: images/2018-11/698584157B008F2FAFA87CB64119ABF5.jpg
 catalog: true
 tags:
     - Linux
