--- a/_posts/2018-11/2018-11-19-ubuntu搭建自己的安全可控聊天服务.md
+++ b/_posts/2018-11/2018-11-19-ubuntu搭建自己的安全可控聊天服务.md
@@ -4,7 +4,7 @@ title:      ubuntu搭建自己的安全可控聊天服务
 subtitle:   搭建属于自己的聊天服务器Rocket.Chat
 date:       2018-11-19
 author:     Yonghao Wang
-header-img: images/2018-11/cold.jpg
+header-img: images/2018-11/521ED825C207974315D43A4CAB1ED663.jpg
 catalog: true
 tags:
     - Linux
