--- a/_posts/2018-11/2018-11-19-linux系统简易搭建ssr翻墙.md
+++ b/_posts/2018-11/2018-11-19-linux系统简易搭建ssr翻墙.md
@@ -23,7 +23,8 @@ tags:
 
 最后当然是ssr的安装脚本了，里面包含了Windows和Android客户端，以及一个简易的web页面。
 先把这个文件下载好。
-[ssr多用户安装包](/files/2018-11/ssr-multiuser.zip)
+
+[ssr多用户安装包](https://www.mrwang.pw/files/public/ssr-multiuser.zip)
 # 安装
 打开xshell，输入vps的信息连接到我们的远程服务器。
 ![](/images/2018-11/9191301.png)
