--- a/_posts/2018-11/2018-11-17-Linux拦截某个ip的所有流量.md
+++ b/_posts/2018-11/2018-11-17-Linux拦截某个ip的所有流量.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Linux拦截某个ip的所有流量
 subtitle:   防止别人滥用机器上的服务
 date:       2018-11-17
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-11/cold.jpg
 catalog: true
 tags:
