--- a/_posts/2018-11/2018-11-17-亚马逊aws服务器设置用户密码.md
+++ b/_posts/2018-11/2018-11-17-亚马逊aws服务器设置用户密码.md
@@ -3,7 +3,7 @@ layout:     post
 title:      亚马逊aws服务器设置用户密码
 subtitle:   在主机商只提供了密钥的情况下设置用户密码
 date:       2018-11-17
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-11/698584157B008F2FAFA87CB64119ABF5.jpg
 catalog: true
 tags:
