--- a/_posts/2018-11/2018-11-19-linux系统简易搭建ssr翻墙.md
+++ b/_posts/2018-11/2018-11-19-linux系统简易搭建ssr翻墙.md
@@ -3,7 +3,7 @@ layout:     post
 title:      linux系统简易搭建ssr翻墙服务
 subtitle:   轻松搭建私有cli界面ssr服务端
 date:       2018-11-19
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-11/521ED825C207974315D43A4CAB1ED663.jpg
 catalog: true
 tags:
