--- a/_posts/2018-11/2018-11-21-ubuntu16.04升级到最新的ubuntu18.04.md
+++ b/_posts/2018-11/2018-11-21-ubuntu16.04升级到最新的ubuntu18.04.md
@@ -3,7 +3,7 @@ layout:     post
 title:      ubuntu16.04升级到最新的ubuntu18.04
 subtitle:   将主机商提供的ubuntu16.04更新
 date:       2018-11-21
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-11/cold.jpg
 catalog: true
 tags:
