--- a/_posts/2018-11/2018-11-23-telegram.md
+++ b/_posts/2018-11/2018-11-23-telegram.md
@@ -3,7 +3,7 @@ layout:     post
 title:      在Linunx、Windows、Android安装并使用telegram(电报)
 subtitle:   使用telegram官方提供的MTProxy进行代理
 date:       2018-11-23
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-11/B5C75C1C62260347B7086E97EAAD5E6D.jpg
 catalog: true
 tags:
