--- a/_posts/2018-11/2018-11-24-给自己的网站启用https.md
+++ b/_posts/2018-11/2018-11-24-给自己的网站启用https.md
@@ -3,7 +3,7 @@ layout:     post
 title:      给自己的网站启用https增强安全性
 subtitle:   使用caddy为自己的域名启用https
 date:       2018-11-24
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-11/photo_2018-11-24_17-30-53.jpg
 catalog: true
 tags:
