--- a/_posts/2018-11/2018-11-30-在两台Linux主机之间快速传输大量文件.md
+++ b/_posts/2018-11/2018-11-30-在两台Linux主机之间快速传输大量文件.md
@@ -3,7 +3,7 @@ layout:     post
 title:      在两台Linux系统之间快速传输大量文件
 subtitle:   利用scp命令在Linux系统之间转移文件
 date:       2018-11-30
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-11/30D0F8982A61AC8E0141984E028225CE.jpg
 catalog: true
 tags:
