--- a/_posts/2018-12/2018-12-6-匈牙利算法的代码实现ruby.md
+++ b/_posts/2018-12/2018-12-6-匈牙利算法的代码实现ruby.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      匈牙利算法的ruby代码实现
 date:       2018-12-06
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-12/photo_2018-12-06_20-28-42.jpg
 catalog: true
 tags:
