--- a/_posts/2018-12/2018-12-8-记一次在jwt里遇到的坑.md
+++ b/_posts/2018-12/2018-12-8-记一次在jwt里遇到的坑.md
@@ -3,7 +3,7 @@ layout:     post
 title:      记一次在jwt里遇到的坑
 subtitle:   spring cloud在jwt的里遇到的坑
 date:       2018-12-08
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-12/photo_2018-12-06_20-28-42.jpg
 catalog: true
 tags:
