--- a/_posts/2018-11/2018-11-29-windows查找端口占用并杀死进程.md
+++ b/_posts/2018-11/2018-11-29-windows查找端口占用并杀死进程.md
@@ -3,7 +3,7 @@ layout:     post
 title:      windows查找端口占用并杀死进程
 subtitle:   windows通过查找进程名杀死进程
 date:       2018-11-29
-author:     Yonghao Wang
+author:     Reed
 header-img: images/2018-11/698584157B008F2FAFA87CB64119ABF5.jpg
 catalog: true
 tags:
