--- a/_posts/2018-12/2018-12-11-caddy搭建建立简易文件浏览器.md
+++ b/_posts/2018-12/2018-12-11-caddy搭建建立简易文件浏览器.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      caddy搭建建立简易文件浏览器
 subtitle:   快速搭建可定制的文件传输页面
-date:       2018-12-08
-author:     Yonghao Wang
+date:       2018-12-11
+author:     Reed
 header-img: images/2018-12/photo_2018-12-11_12-42-56.jpg
 catalog: true
 tags:
