--- a/_posts/2018-12/2018-12-19.树莓派规格信息记录.md
+++ b/_posts/2018-12/2018-12-19.树莓派规格信息记录.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      树莓派3B+ 规格信息记录
+title:      树莓派3B+各项信息记录
 # subtitle:   修改hibernate命名策略
 date:       2018-12-19
 author:     Reed
@@ -28,3 +28,34 @@ tags:
 
 # GPIO
 ![](/images/2018-12/a9f643dagy1fjjcdj8wuwj20jn0s3tc0.png)
+
+# 中文输入法
+
+```
+sudo apt-get install ttf-wqy-zenhei
+sudo apt-get install scim-pinyin
+sudo raspi-config
+```
+然后`change locale`，将语言设置为`zh_ch.UTF-8`
+
+# 换源
+## 清华大学源
+先运行`cat /etc/os-realease`，查看debian系统的版本。
+
+然后`sudo vim /etc/apt/sources.list`，注释掉自带的源，然后增加下面对应的源。
+### debian9
+```
+deb http://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ stretch main non-free contrib
+deb-src http://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ stretch main non-free contrib
+```
+### debian8
+```
+deb http://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ jessie main non-free contrib
+deb-src http://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ jessie main non-free contrib
+```
+### debian7
+```
+deb http://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ wheezy main non-free contrib
+deb-src http://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ wheezy main non-free contrib
+```
+
