统一单词大小写，屏蔽翻墙文章

--- a/_posts/2018-12/2018-12-8-记一次在jwt里遇到的坑.md
+++ b/_posts/2018-12/2018-12-8-记一次在jwt里遇到的坑.md
@@ -7,7 +7,7 @@ author:     Reed
 header-img: images/2018-12/photo_2018-12-06_20-28-42.jpg
 catalog: true
 tags:
-    - Spring cloud
+    - Spring Cloud
 ---
 # 前言
 在Spring cloud里我使用jwt来保存用户的登录凭据，为了api-gateway拿到token能更方便的处理一些信息，我使用了增强头部，也就是在token里增加了一些额外的信息，比如用户id等~
