--- a/_posts/2018-12/2018-12-12-feign调用消息发送成功但是404错误.md
+++ b/_posts/2018-12/2018-12-12-feign调用消息发送成功但是404错误.md
@@ -7,7 +7,7 @@ author:     Reed
 header-img: images/2018-12/photo_2018-12-11_12-43-09.jpg
 catalog: true
 tags:
-    - Spring cloud
+    - Spring Cloud
 ---
 
 # 前言
