--- a/_posts/2019-03/2019-3-28-解决微信小程序获取验证码无法携带cookie的问题.md
+++ b/_posts/2019-03/2019-3-28-解决微信小程序获取验证码无法携带cookie的问题.md
@@ -18,7 +18,7 @@ tags:
 灵机一动就想到：可以单独发起请求带上cookie获取到图片，然后把响应写入到验证码图片框里，这样就可以达到我们的目的了。
 
 可是将相应内容输出一看，却是这个样子的。
-![](../../images/2019-3/328191416.png)
+![](/images/2019-3/328191416.png)
 
 好吧传过来的并不是base64字符的图像，那么在小程序里也就无法处理了。
 
