[fix]名词的大小写未能统一的错误

--- a/_posts/2018-11/2018-11-17-亚马逊aws服务器设置用户密码.md
+++ b/_posts/2018-11/2018-11-17-亚马逊aws服务器设置用户密码.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      亚马逊aws服务器设置用户密码
+title:      亚马逊AWS服务器设置用户密码
 subtitle:   在主机商只提供了密钥的情况下设置用户密码
 date:       2018-11-17
 author:     Reed
@@ -15,7 +15,7 @@ tags:
 
 按照以往的方式选择各项配置之后，启动机器，可是居然没有给出密码或设置密码密码的地方，只有一个pem密钥用来连接到服务器，好吧 ，先用这个连接上机器。
 
-令人蛋疼的是，进去了之后发现是ubuntu普通用户，想用`passwd`命令给自己加一个密码，可是不知道自己的默认密码是什么🙃。
+令人蛋疼的是，进去了之后发现是Ubuntu普通用户，想用`passwd`命令给自己加一个密码，可是不知道自己的默认密码是什么🙃。
 
 # 解决办法
 这时只好求助Google，果然在第一页就找到了一个解决办法。
@@ -42,13 +42,13 @@ PasswordAuthentication no
 ```
 service sshd restart
 ```
-接下来就该给默认的ubuntu用户设置一个密码了，和上边给root用户设置密码一样。
+接下来就该给默认的Ubuntu用户设置一个密码了，和上边给root用户设置密码一样。
 ```
 passwd ubuntu
 ```
-根据提示输入两次密码，便为ubuntu用户设置好了密码。现在可以愉快的使用传统`用户名 + 密码`的方式来登陆了。😁
+根据提示输入两次密码，便为Ubuntu用户设置好了密码。现在可以愉快的使用传统`用户名 + 密码`的方式来登陆了。😁
 
 # 吐槽
 
-话说AWS可能对国内的网络优化不太好，或者是没有优化吧，感觉延迟太高了体验不太好，刚刚安装了一个bbr，晚上的时候再看看网络情况如何。
+话说AWS可能对国内的网络优化不太好，或者是没有优化吧，感觉延迟太高了体验不太好，刚刚安装了一个BBR，晚上的时候再看看网络情况如何。
 
