--- a/_posts/2018-11/2018-11-19-linux系统简易搭建ssr翻墙.md
+++ b/_posts/2018-11/2018-11-19-linux系统简易搭建ssr翻墙.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      linux系统简易搭建ssr翻墙服务
+title:      Linux系统简易搭建ssr翻墙服务
 subtitle:   轻松搭建私有cli界面ssr服务端
 # date:       20018-11-19
 author:     Reed
