--- a/_posts/2018-11/2018-11-21-ubuntu16.04升级到最新的ubuntu18.04.md
+++ b/_posts/2018-11/2018-11-21-ubuntu16.04升级到最新的ubuntu18.04.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      ubuntu16.04升级到最新的ubuntu18.04
-subtitle:   将主机商提供的ubuntu16.04更新
+title:      Ubuntu16.04升级到最新的Ubuntu18.04
+subtitle:   将主机商提供的Ubuntu16.04更新
 date:       2018-11-21
 author:     Reed
 header-img: images/2018-11/cold.jpg
@@ -11,12 +11,12 @@ tags:
 ---
 
 # 前言
-昨天给我之前买的一台vps装bbr，可是这是比较新的内核才能使用到这个功能，我的服务器是ubuntu16.04的，在一键安装bbr的脚本执行过后机器直接就Down了，凉了~
+昨天给我之前买的一台Vps装BBR，可是这是比较新的内核才能使用到这个功能，我的服务器是Ubuntu16.04的，在一键安装BBR的脚本执行过后机器直接就Down了，凉了~
 
-这个教程适用于ubuntu16.04server版本，推荐使用新装系统进行，别的版本未测试不太清楚情况。
+这个教程适用于Ubuntu16.04Server版本，推荐使用新装系统进行，别的版本未测试不太清楚情况。
 
 # 正文
-我们知道在4.19的Linux内核之后就已经集成了bbr，可是我主机商并没有在面板提供ubuntu18的镜像给我安装，那就只好选择ubutnu16然后更新系统达到这一目的。
+我们知道在4.19的Linux内核之后就已经集成了bbr，可是我主机商并没有在面板提供Ubuntu18的镜像给我安装，那就只好选择Ubutnu16然后更新系统达到这一目的。
 首先更新一下软件包
 ```
 sudo apt update && sudo apt upgrade
@@ -27,13 +27,13 @@ sudo apt dist-upgrade
 ```
 ![](/images/2018-11/21154851.png)
 
-这里会有一个选择启动内核，如果是为了bbr升级系统的话，选择第一项也就是`install the package maintainer\`s  version`。
+这里会有一个选择启动内核，如果是为了BBR升级系统的话，选择第一项也就是`install the package maintainer\`s  version`。
 
 然后安装更新系统的软件包（笑
 ```
 sudo apt-get install  update-manager-core
 ```
-准备工作都做好了，然后我们来开始更新系统，这里推荐切换到主机商提供的vnc界面来进行操作。
+准备工作都做好了，然后我们来开始更新系统，这里推荐切换到主机商提供的VNC界面来进行操作。
 ```
 sudo do-release-upgrade
 ```
