--- a/_posts/2018-11/2018-11-23-telegram.md
+++ b/_posts/2018-11/2018-11-23-telegram.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      在Linunx、Windows、Android安装并使用telegram(电报)
-subtitle:   使用telegram官方提供的MTProxy进行代理
+title:      在Linunx、Windows、Android安装并使用Telegram(电报)
+subtitle:   使用Telegram官方提供的MTProxy进行代理
 date:       2018-11-23
 author:     Reed
 header-img: images/2018-11/B5C75C1C62260347B7086E97EAAD5E6D.jpg
@@ -15,7 +15,7 @@ tags:
 本文还在完善中
 ```
 
-> 众所周知，国产通讯软件没有一款是安全、隐私的，而如今俄罗斯人开发的一款名为电报(telegram)的软件变得越来越流行，这正是因为加密通讯，是 Telegram 主打的功能之一。
+> 众所周知，国产通讯软件没有一款是安全、隐私的，而如今俄罗斯人开发的一款名为电报(Telegram)的软件变得越来越流行，这正是因为加密通讯，是 Telegram 主打的功能之一。
 
 # 前言
 以下内容摘自维基百科
