--- a/_posts/2018-11/2018-11-29-卸载阿里云服务器里面监控软件云骑士.md
+++ b/_posts/2018-11/2018-11-29-卸载阿里云服务器里面监控软件云骑士.md
@@ -13,7 +13,7 @@ tags:
 > 待更
 
 # 前言
-阿里云的服务器带有若干监控软件，美其名曰`云盾(安骑士)`，有人在你机器里跑着root权限的软件不用说大家也知道该怎么办了吧！
+阿里云的服务器带有若干监控软件，美其名曰`云盾(安骑士)`，有人在你机器里跑着Root权限的软件不用说大家也知道该怎么办了吧！
 
 # 行动
 好在云盾它提供了一个卸载脚本，我们执行即可
