--- a/_posts/2018-12/2018-12-12-feign调用消息发送成功但是404错误.md
+++ b/_posts/2018-12/2018-12-12-feign调用消息发送成功但是404错误.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      feign调用消息发送成功但是404错误
+title:      Feign调用消息发送成功但是404错误
 # subtitle:   快速搭建可定制的文件传输页面
 date:       2018-12-12
 author:     Reed
@@ -59,7 +59,7 @@ GET
 这就很让人头大了！
 
 # 解决
-这个问题主要在于Feign它是一个http调用的框架，也就是说被调用处得像接收http请求一样，并且有返回状态码，Feign才知道调用成功了。
+这个问题主要在于Feign它是一个HTTP调用的框架，也就是说被调用处得像接收HTTP请求一样，并且有返回状态码，Feign才知道调用成功了。
 
 可以把服务提供方（被调用处）改成这样
 ``` java
