--- a/_posts/2018-12/2018-12-13-Linux安装并使用ssr.md
+++ b/_posts/2018-12/2018-12-13-Linux安装并使用ssr.md
@@ -14,10 +14,10 @@ tags:
 # 引子
 也许是使用Linux的大佬都不屑于写这么简单的教程吧，所以关于如何在Linux上安装使用ssr客户端的教程比较少又比较模糊。
 
-所以我就来写这个教程吧，同时因为Linux克隆github的仓库奇慢并且可能会出现超时的情况（在此感谢GFW），文中及脚本的git仓库均位于我自己搭建的[gogs](https://gogs.io/)。
+所以我就来写这个教程吧，同时因为Linux克隆GitHub的仓库奇慢并且可能会出现超时的情况（在此感谢GFW），文中及脚本的Git仓库均位于我自己搭建的[gogs](https://gogs.io/)。
 
 # 安装
-首先确认一下自己自己安装了git。
+首先确认一下自己自己安装了Git。
 
 #### ubuntu
 ```
