--- a/_posts/2018-12/2018-12-6-匈牙利算法的代码实现ruby.md
+++ b/_posts/2018-12/2018-12-6-匈牙利算法的代码实现ruby.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      匈牙利算法的ruby代码实现
+title:      匈牙利算法的Ruby代码实现
 date:       2018-12-06
 author:     Reed
 header-img: images/2018-12/photo_2018-12-06_20-28-42.jpg
@@ -9,7 +9,7 @@ tags:
     - Algorithm
 ---
 
-> 借鉴了java的代码实现，初学ruby代码不熟悉很多内置的类库，代码应该是写得很糟糕 :).
+> 借鉴了Java的代码实现，初学Ruby代码不熟悉很多内置的类库，代码应该是写得很糟糕 :).
 > 
 > 熟悉了之后再来优化
 
