--- a/_posts/2019-02/2019-2-5-java代码实现抽奖.md
+++ b/_posts/2019-02/2019-2-5-java代码实现抽奖.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      java代码实现抽奖
+title:      Java代码实现抽奖
 subtitle:   不同抽奖次数中奖率不同
 date:       2019-02-05
 author:     Reed
@@ -18,7 +18,7 @@ tags:
 # 实施固定概率抽奖
 
 ### 原理
-说到抽奖其实就是概率的问题，这是便想到了`Math.random`这个函数，它可以为我们产生一个`double`类型的数字, 伪随机数在范围[0，1)，也就是说，从0（包括0）往上，但是不包括1（排除1）。
+说到抽奖其实就是概率的问题，这是便想到了`Math.random()`这个函数，它可以为我们产生一个`Double`类型的数字, 伪随机数在范围[0，1)，也就是说，从0（包括0）往上，但是不包括1（排除1）。
 
 假如A奖品的中奖概率为`0.4`，B奖品概率为`0.5`，未中奖的概率是`0.1`，那么我们先产生一个随机数，然后判断它的大小，若在[0, 0.4)即中A奖品，在[0.4, 0.8)则中B奖品，[0.9, 1)之间不中奖。因为随机数出现大小的的位置随机的，那么我们便可以这样来设置数值区间来判断抽中的是哪一个奖品。
 
