--- a/_posts/2019-03/2019-3-28-解决微信小程序获取验证码无法携带cookie的问题.md
+++ b/_posts/2019-03/2019-3-28-解决微信小程序获取验证码无法携带cookie的问题.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      解决微信小程序获取验证码无法携带cookie的问题
+title:      解决微信小程序获取验证码图片时无法携带Cookie的问题
 date:       2019-03-28
 author:     Reed
 header-img: images/2019-3/IMG_20190201_152609 1.jpg
@@ -9,9 +9,9 @@ tags:
   -  Unarchived
 ---
 # 前言
-一般为了防止机器登录web网站，我们都会要求输入验证码来进行登录操作。这次就遇到一个已经投入使用的网站需要一个微信小程序，接口都是通用的也不存在什么大的问题，可是验证码这里就有点麻烦了。
+一般为了防止机器登录Web网站，我们都会要求输入验证码来进行登录操作。这次就遇到一个已经投入使用的网站需要一个微信小程序，接口都是通用的也不存在什么大的问题，可是验证码这里就有点麻烦了。
 # 解决
-我们知道，微信小程序在发起请求的时候是不会保存登录态（cookie）的，所以需要我们自己手动来保存获取到的cookie。
+我们知道，微信小程序在发起请求的时候是不会保存登录态（Cookie）的，所以需要我们自己手动来保存获取到的Cookie。
 
 获取验证码并显示也不例外，我们可以将验证码的接口url直接写入验证码图片的src属性里，就像`src='/pub/jcaptcha.servlet'`，但是上边提到过小程序不会主动携带cookie发送请求的，所以这样操作无法将验证码和登录请求绑定在一起，只能另寻他法。
 
@@ -20,10 +20,10 @@ tags:
 可是将相应内容输出一看，却是这个样子的。
 ![](/images/2019-3/328191416.png)
 
-好吧传过来的并不是base64字符的图像，那么在小程序里也就无法处理了。
+好吧传过来的并不是Base64字符的图像，那么在小程序里也就无法处理了。
 
 在谷歌了一番之后呢，找到一个很巧妙的办法：
-小程序有一个`wx.downloadFile()`的方法，这是下载一个文件用的，我们可以用它带着cookie把验证码图片下载到本地的临时目录然后将本地路径做为验证码图片的`src`，就能解决验证码这个头疼的问题了！
+小程序有一个`wx.downloadFile()`的方法，这是下载一个文件用的，我们可以用它带着Cookie把验证码图片下载到本地的临时目录然后将本地路径做为验证码图片的`src`，就能解决验证码这个头疼的问题了！
 ``` js
 let url =  app.globalData.site + '/pub/jcaptcha.servlet';
 wx.downloadFile({
