--- a/_posts/2018-11/2018-11-19-ubuntu搭建自己的安全可控聊天服务.md
+++ b/_posts/2018-11/2018-11-19-ubuntu搭建自己的安全可控聊天服务.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      ubuntu搭建自己的安全可控聊天服务
+title:      Ubuntu搭建自己的安全可控聊天服务
 subtitle:   搭建属于自己的聊天服务器Rocket.Chat
 date:       2018-11-19
 author:     Reed
@@ -15,7 +15,7 @@ tags:
 > 2018.11.21 增加中文频道名设置方法
 
 # 前言
-得益于qq、微信的疯狂监控和审查，以及安全机制，再加上在qq里发送链接等文本的时候，它会自动给你在前边加上一个小图标，导致传输文本等信息时及其麻烦。
+得益于QQ、微信的疯狂监控和审查，以及安全机制，再加上在QQ里发送链接等文本的时候，它会自动给你在前边加上一个小图标，导致传输文本等信息时及其麻烦。
 
 团队里进行交流的时候当然我们希望聊天记录等信息掌握在自己手里，而不是放在别人那里被为所欲为:)。
 
@@ -23,7 +23,7 @@ tags:
 
 # 安装
 
-在ubuntu系统，可以通过如下命令快速的安装
+在Ubuntu系统，可以通过如下命令快速的安装
 ```
 sudo snap install rocketchat-server
 ```
