--- a/_posts/2018-11/2018-11-30-在两台Linux主机之间快速传输大量文件.md
+++ b/_posts/2018-11/2018-11-30-在两台Linux主机之间快速传输大量文件.md
@@ -10,14 +10,14 @@ tags:
     - Linux
 ---
 # 前言
-很多时候会用到在Linux系统之间传输文件，在之前我都是打包然后建立web然后下载过去...(这种做法实在是太愚蠢了)
+很多时候会用到在Linux系统之间传输文件，在之前我都是打包然后建立Web然后下载过去...(这种做法实在是太愚蠢了)
 
 今天遇到了16G的文件夹，接近4w个文件，以前的办法当然行不通了，在这里记录一下高效的Linux里优雅简单的解决办法。
 
 # 解决
 Linux scp命令用于Linux之间复制文件和目录。
 
-scp是 secure copy的缩写, scp是linux系统下基于ssh登陆进行安全的远程文件拷贝命令。
+scp是 secure copy的缩写, scp是Linux系统下基于ssh登陆进行安全的远程文件拷贝命令。
 
 所以先安装一下ssh，如果没安装的话。
 ```
