--- a/_posts/2018-12/2018-12-11-caddy搭建建立简易文件浏览器.md
+++ b/_posts/2018-12/2018-12-11-caddy搭建建立简易文件浏览器.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      caddy搭建建立简易文件浏览器
+title:      Caddy搭建建立简易文件浏览器
 subtitle:   快速搭建可定制的文件传输页面
 date:       2018-12-11
 author:     Reed
@@ -11,12 +11,12 @@ tags:
 ---
 
 # 前言
-之前有介绍过用caddy[搭建https网站](/2018/11/24/给自己的网站启用https)，在有的时候我们可能希望建立一个ftp那样的文件浏览器，能简单快速的下载到需要的文件，这个对于caddy来说是轻而易举的事情。
+之前有介绍过用Caddy[搭建HTTPS网站](/2018/11/24/给自己的网站启用HTTPS)，在有的时候我们可能希望建立一个FTP那样的文件浏览器，能简单快速的下载到需要的文件，这个对于Caddy来说是轻而易举的事情。
 
 # 操作
-caddy的程序里默认就带有文件浏览的功能，还是按照老样子先安装caddy。
+Caddy的程序里默认就带有文件浏览的功能，还是按照老样子先安装Caddy。
 ```
-// 这是Linux的操作方式，别的系统访问caddy官网操作吧！
+// 这是Linux的操作方式，别的系统访问Caddy官网操作吧！
 CADDY_TELEMETRY=on curl https://getcaddy.com | bash -s personal
 ```
 · 注： 如果是国内的服务器很大几率下载失败，这个时候需要自己的电脑访问官网下载二进制文件包然后传递到服务器。
