--- a/_posts/2019-03/2019-3-11-spring项目获取到的时间相差8个小时.md
+++ b/_posts/2019-03/2019-3-11-spring项目获取到的时间相差8个小时.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      spring项目获取到的时间相差8个小时
+title:      Spring项目获取到的时间相差8个小时
 date:       2019-03-11
 author:     Reed
 header-img: images/2019-3/IMG_20190201_152609 1.jpg
@@ -14,7 +14,7 @@ tags:
 > 前端收到的是 `2019-02-28 13:53:11`
 
 # 解决
-这8个小时呢，其实就是因为我们位于GMT+8时区，而`jackson`在对时间字段进行序列化的时候，默认获取到的时间是零时区，所以做了一个转换，这时需要在application.yaml配置一下。
+这8个小时呢，其实就是因为我们位于GMT+8时区，而`Jackson`在对时间字段进行序列化的时候，默认获取到的时间是零时区，所以做了一个转换，这时需要在application.yaml配置一下。
 ``` yaml
 spring:
   jackson:
